fix(cb2-11185): break long strings to overflow, but not mid-word unless necessary

--- a/src/app/forms/components/view-list-item/view-list-item.component.scss
+++ b/src/app/forms/components/view-list-item/view-list-item.component.scss
@@ -15,5 +15,5 @@
 }
 
 .break-all {
-    word-break: break-all;
+    overflow-wrap: anywhere;
 }
